--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9056603773584906" branch-rate="0.7741935483870968" lines-covered="96" lines-valid="106" branches-covered="24" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1441792900923">
+<coverage line-rate="0.9433962264150944" branch-rate="0.8387096774193549" lines-covered="100" lines-valid="106" branches-covered="26" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1441793629237">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9056603773584906" branch-rate="0.7741935483870968" complexity="2.3">
+		<package name="com.tw.biblioteca" line-rate="0.9433962264150944" branch-rate="0.8387096774193549" complexity="2.3">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6363636363636364" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -48,15 +48,15 @@
 						<line number="19" hits="0" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Book" filename="com/tw/biblioteca/Book.java" line-rate="0.7894736842105263" branch-rate="0.6" complexity="3.0">
+				<class name="com.tw.biblioteca.Book" filename="com/tw/biblioteca/Book.java" line-rate="1.0" branch-rate="0.8" complexity="3.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="76" branch="false"/>
-								<line number="10" hits="76" branch="false"/>
-								<line number="11" hits="76" branch="false"/>
-								<line number="12" hits="76" branch="false"/>
-								<line number="13" hits="76" branch="false"/>
+								<line number="9" hits="79" branch="false"/>
+								<line number="10" hits="79" branch="false"/>
+								<line number="11" hits="79" branch="false"/>
+								<line number="12" hits="79" branch="false"/>
+								<line number="13" hits="79" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -83,20 +83,20 @@
 								<line number="31" hits="6" branch="false"/>
 							</lines>
 						</method>
-						<method name="hashCode" signature="()I" line-rate="0.0" branch-rate="0.0" complexity="0">
+						<method name="hashCode" signature="()I" line-rate="1.0" branch-rate="0.5" complexity="0">
 							<lines>
-								<line number="36" hits="0" branch="false"/>
-								<line number="37" hits="0" branch="true" condition-coverage="0% (0/2)">
+								<line number="36" hits="4" branch="false"/>
+								<line number="37" hits="4" branch="true" condition-coverage="50% (1/2)">
 									<conditions>
-										<condition number="0" type="jump" coverage="0%"/>
+										<condition number="0" type="jump" coverage="50%"/>
 									</conditions>
 								</line>
-								<line number="38" hits="0" branch="true" condition-coverage="0% (0/2)">
+								<line number="38" hits="4" branch="true" condition-coverage="50% (1/2)">
 									<conditions>
-										<condition number="0" type="jump" coverage="0%"/>
+										<condition number="0" type="jump" coverage="50%"/>
 									</conditions>
 								</line>
-								<line number="39" hits="0" branch="false"/>
+								<line number="39" hits="4" branch="false"/>
 							</lines>
 						</method>
 						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -107,11 +107,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="76" branch="false"/>
-						<line number="10" hits="76" branch="false"/>
-						<line number="11" hits="76" branch="false"/>
-						<line number="12" hits="76" branch="false"/>
-						<line number="13" hits="76" branch="false"/>
+						<line number="9" hits="79" branch="false"/>
+						<line number="10" hits="79" branch="false"/>
+						<line number="11" hits="79" branch="false"/>
+						<line number="12" hits="79" branch="false"/>
+						<line number="13" hits="79" branch="false"/>
 						<line number="16" hits="12" branch="false"/>
 						<line number="17" hits="12" branch="false"/>
 						<line number="21" hits="24" branch="true" condition-coverage="100% (2/2)">
@@ -134,18 +134,18 @@
 						</line>
 						<line number="29" hits="15" branch="false"/>
 						<line number="31" hits="6" branch="false"/>
-						<line number="36" hits="0" branch="false"/>
-						<line number="37" hits="0" branch="true" condition-coverage="0% (0/2)">
+						<line number="36" hits="4" branch="false"/>
+						<line number="37" hits="4" branch="true" condition-coverage="50% (1/2)">
 							<conditions>
-								<condition number="0" type="jump" coverage="0%"/>
+								<condition number="0" type="jump" coverage="50%"/>
 							</conditions>
 						</line>
-						<line number="38" hits="0" branch="true" condition-coverage="0% (0/2)">
+						<line number="38" hits="4" branch="true" condition-coverage="50% (1/2)">
 							<conditions>
-								<condition number="0" type="jump" coverage="0%"/>
+								<condition number="0" type="jump" coverage="50%"/>
 							</conditions>
 						</line>
-						<line number="39" hits="0" branch="false"/>
+						<line number="39" hits="4" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Librarian" filename="com/tw/biblioteca/Librarian.java" line-rate="1.0" branch-rate="1.0" complexity="1.6666666666666667">
