--- a/reports/TEST-com.tw.biblioteca.LibraryControllerTest.xml
+++ b/reports/TEST-com.tw.biblioteca.LibraryControllerTest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<testsuite errors="0" failures="0" hostname="precise64" name="com.tw.biblioteca.TaskDispatcherTest" tests="4" time="0.019" timestamp="2015-09-09T18:43:11">
+<testsuite errors="0" failures="0" hostname="precise64" name="com.tw.biblioteca.LibraryControllerTest" tests="6" time="0.384" timestamp="2015-09-09T18:43:11">
   <properties>
     <property name="ant.project.invoked-targets" value="coverage" />
     <property name="java.runtime.name" value="OpenJDK Runtime Environment" />
@@ -69,10 +69,12 @@
     <property name="ant.file.type" value="file" />
     <property name="sun.cpu.isalist" value="" />
   </properties>
-  <testcase classname="com.tw.biblioteca.TaskDispatcherTest" name="shouldExitIfOptionTwoIsChosen" time="0.001" />
-  <testcase classname="com.tw.biblioteca.TaskDispatcherTest" name="shouldCheckoutBookIfOptionThreeIsChosen" time="0.006" />
-  <testcase classname="com.tw.biblioteca.TaskDispatcherTest" name="shouldDisplayListOfBooksIfOptionOneIsChosen" time="0.0" />
-  <testcase classname="com.tw.biblioteca.TaskDispatcherTest" name="shouldReturnBookIfOptionFourIsChosen" time="0.001" />
+  <testcase classname="com.tw.biblioteca.LibraryControllerTest" name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt" time="0.347" />
+  <testcase classname="com.tw.biblioteca.LibraryControllerTest" name="shouldDisplaySuccessMessageForSuccessfulCheckout" time="0.0" />
+  <testcase classname="com.tw.biblioteca.LibraryControllerTest" name="shouldDisplaySuccessMessageForSuccessfulReturn" time="0.0" />
+  <testcase classname="com.tw.biblioteca.LibraryControllerTest" name="shouldAcceptValidBookNameFromUserAndRemoveTheBook" time="0.02" />
+  <testcase classname="com.tw.biblioteca.LibraryControllerTest" name="shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt" time="0.0" />
+  <testcase classname="com.tw.biblioteca.LibraryControllerTest" name="shouldAcceptValidBookNameFromUserAndAddTheBook" time="0.001" />
   <system-out><![CDATA[]]></system-out>
   <system-err><![CDATA[]]></system-err>
 </testsuite>
