--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9433962264150944" branch-rate="0.8387096774193549" lines-covered="100" lines-valid="106" branches-covered="26" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1441793629237">
+<coverage line-rate="0.9439252336448598" branch-rate="0.8387096774193549" lines-covered="101" lines-valid="107" branches-covered="26" branches-valid="31" complexity="2.3" version="2.1.1" timestamp="1441824195412">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9433962264150944" branch-rate="0.8387096774193549" complexity="2.3">
+		<package name="com.tw.biblioteca" line-rate="0.9439252336448598" branch-rate="0.8387096774193549" complexity="2.3">
 			<classes>
 				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6363636363636364" branch-rate="1.0" complexity="1.5">
 					<methods>
@@ -148,76 +148,6 @@
 						<line number="39" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Librarian" filename="com/tw/biblioteca/Librarian.java" line-rate="1.0" branch-rate="1.0" complexity="1.6666666666666667">
-					<methods>
-						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/Library;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
-							<lines>
-								<line number="6" hits="8" branch="false"/>
-								<line number="8" hits="8" branch="false"/>
-								<line number="9" hits="8" branch="false"/>
-								<line number="10" hits="8" branch="false"/>
-							</lines>
-						</method>
-						<method name="issueBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
-							<lines>
-								<line number="13" hits="4" branch="false"/>
-								<line number="14" hits="4" branch="false"/>
-								<line number="15" hits="4" branch="false"/>
-								<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
-									<conditions>
-										<condition number="0" type="jump" coverage="100%"/>
-									</conditions>
-								</line>
-								<line number="17" hits="1" branch="false"/>
-								<line number="19" hits="3" branch="false"/>
-								<line number="20" hits="4" branch="false"/>
-							</lines>
-						</method>
-						<method name="returnBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
-							<lines>
-								<line number="23" hits="4" branch="false"/>
-								<line number="24" hits="4" branch="false"/>
-								<line number="25" hits="4" branch="false"/>
-								<line number="26" hits="4" branch="true" condition-coverage="100% (2/2)">
-									<conditions>
-										<condition number="0" type="jump" coverage="100%"/>
-									</conditions>
-								</line>
-								<line number="27" hits="1" branch="false"/>
-								<line number="29" hits="3" branch="false"/>
-								<line number="31" hits="4" branch="false"/>
-							</lines>
-						</method>
-					</methods>
-					<lines>
-						<line number="6" hits="8" branch="false"/>
-						<line number="8" hits="8" branch="false"/>
-						<line number="9" hits="8" branch="false"/>
-						<line number="10" hits="8" branch="false"/>
-						<line number="13" hits="4" branch="false"/>
-						<line number="14" hits="4" branch="false"/>
-						<line number="15" hits="4" branch="false"/>
-						<line number="16" hits="4" branch="true" condition-coverage="100% (2/2)">
-							<conditions>
-								<condition number="0" type="jump" coverage="100%"/>
-							</conditions>
-						</line>
-						<line number="17" hits="1" branch="false"/>
-						<line number="19" hits="3" branch="false"/>
-						<line number="20" hits="4" branch="false"/>
-						<line number="23" hits="4" branch="false"/>
-						<line number="24" hits="4" branch="false"/>
-						<line number="25" hits="4" branch="false"/>
-						<line number="26" hits="4" branch="true" condition-coverage="100% (2/2)">
-							<conditions>
-								<condition number="0" type="jump" coverage="100%"/>
-							</conditions>
-						</line>
-						<line number="27" hits="1" branch="false"/>
-						<line number="29" hits="3" branch="false"/>
-						<line number="31" hits="4" branch="false"/>
-					</lines>
-				</class>
 				<class name="com.tw.biblioteca.Library" filename="com/tw/biblioteca/Library.java" line-rate="1.0" branch-rate="1.0" complexity="2.25">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -306,7 +236,77 @@
 						<line number="40" hits="1" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.9047619047619048" branch-rate="0.6666666666666666" complexity="2.5">
+				<class name="com.tw.biblioteca.LibraryController" filename="com/tw/biblioteca/LibraryController.java" line-rate="1.0" branch-rate="1.0" complexity="1.6666666666666667">
+					<methods>
+						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/Library;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="7" hits="8" branch="false"/>
+								<line number="9" hits="8" branch="false"/>
+								<line number="10" hits="8" branch="false"/>
+								<line number="11" hits="8" branch="false"/>
+							</lines>
+						</method>
+						<method name="issueBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="14" hits="4" branch="false"/>
+								<line number="15" hits="4" branch="false"/>
+								<line number="16" hits="4" branch="false"/>
+								<line number="17" hits="4" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="18" hits="1" branch="false"/>
+								<line number="20" hits="3" branch="false"/>
+								<line number="21" hits="4" branch="false"/>
+							</lines>
+						</method>
+						<method name="returnBook" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="24" hits="4" branch="false"/>
+								<line number="25" hits="4" branch="false"/>
+								<line number="26" hits="4" branch="false"/>
+								<line number="27" hits="4" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="28" hits="1" branch="false"/>
+								<line number="30" hits="3" branch="false"/>
+								<line number="32" hits="4" branch="false"/>
+							</lines>
+						</method>
+					</methods>
+					<lines>
+						<line number="7" hits="8" branch="false"/>
+						<line number="9" hits="8" branch="false"/>
+						<line number="10" hits="8" branch="false"/>
+						<line number="11" hits="8" branch="false"/>
+						<line number="14" hits="4" branch="false"/>
+						<line number="15" hits="4" branch="false"/>
+						<line number="16" hits="4" branch="false"/>
+						<line number="17" hits="4" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="18" hits="1" branch="false"/>
+						<line number="20" hits="3" branch="false"/>
+						<line number="21" hits="4" branch="false"/>
+						<line number="24" hits="4" branch="false"/>
+						<line number="25" hits="4" branch="false"/>
+						<line number="26" hits="4" branch="false"/>
+						<line number="27" hits="4" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="28" hits="1" branch="false"/>
+						<line number="30" hits="3" branch="false"/>
+						<line number="32" hits="4" branch="false"/>
+					</lines>
+				</class>
+				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="0.9090909090909091" branch-rate="0.6666666666666666" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
@@ -326,6 +326,7 @@
 								<line number="31" hits="7" branch="false"/>
 								<line number="32" hits="1" branch="false"/>
 								<line number="33" hits="1" branch="false"/>
+								<line number="34" hits="1" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenValidOption" signature="()I" line-rate="1.0" branch-rate="0.5" complexity="0">
@@ -342,19 +343,19 @@
 						</method>
 						<method name="isChoiceValid" signature="(I)Z" line-rate="0.6" branch-rate="0.75" complexity="0">
 							<lines>
-								<line number="38" hits="10" branch="true" condition-coverage="50% (1/2)">
+								<line number="40" hits="10" branch="true" condition-coverage="50% (1/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 									</conditions>
 								</line>
-								<line number="39" hits="10" branch="true" condition-coverage="100% (2/2)">
+								<line number="41" hits="10" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="40" hits="4" branch="false"/>
-								<line number="42" hits="0" branch="false"/>
-								<line number="43" hits="0" branch="false"/>
+								<line number="42" hits="4" branch="false"/>
+								<line number="44" hits="0" branch="false"/>
+								<line number="45" hits="0" branch="false"/>
 							</lines>
 						</method>
 					</methods>
@@ -379,19 +380,20 @@
 						<line number="31" hits="7" branch="false"/>
 						<line number="32" hits="1" branch="false"/>
 						<line number="33" hits="1" branch="false"/>
-						<line number="38" hits="10" branch="true" condition-coverage="50% (1/2)">
+						<line number="34" hits="1" branch="false"/>
+						<line number="40" hits="10" branch="true" condition-coverage="50% (1/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 							</conditions>
 						</line>
-						<line number="39" hits="10" branch="true" condition-coverage="100% (2/2)">
+						<line number="41" hits="10" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="40" hits="4" branch="false"/>
-						<line number="42" hits="0" branch="false"/>
-						<line number="43" hits="0" branch="false"/>
+						<line number="42" hits="4" branch="false"/>
+						<line number="44" hits="0" branch="false"/>
+						<line number="45" hits="0" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.8" complexity="3.0">
